Mobile buttons and privacy fixed up
Done

--- a/terms.html
+++ b/terms.html
@@ -428,12 +428,12 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
           </ul>
         </div>
-        <!-- <div class="app_storelink">
+        <div class="app_storelink">
           <ul>
             <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-            <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
+            <li><a href="https://apps.apple.com/app/id1438404215"><img src="images/app_store.png" alt="workep iOS"></a></li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
