--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -363,12 +363,10 @@ If you join a Team workspace and create a user account, you are a “user,” as
               Berkeley, CA 94704.</br>
               USA</br></br>
 
-              If there are still unresolved Privacy Shield complains you can reach a non-profit alternative dispute resolution provider located in the United States to assist with the complaint resolution process or and independent dispute resolution body as --- , free for you. If you do not receive timely acknowledgement of your complaint, or if your complaint is not satisfactorily, you may able to invoke a binding arbitration process of the Privacy Shield: <a href="https://www.privacyshield.gov/article?id=How-to-Submit-a" >https://www.privacyshield.gov/article?id=How-to-Submit-a</a> Complaint.</br></br>
+              If there are still unresolved Privacy Shield complains you can reach JAMS a third-party dispute resolution provider located in the United States to assist with the complaint resolution process or and independent dispute resolution (<a href="https://www.jamsadr.com/eu-us-privacy-shield">https://www.jamsadr.com/eu-us-privacy-shield</a>), free for you. If you do not receive timely acknowledgement of your complaint, or if your complaint is not satisfactorily, you may able to invoke a binding arbitration process of the Privacy Shield: <a href="https://www.privacyshield.gov/article?id=How-to-Submit-a" >https://www.privacyshield.gov/article?id=How-to-Submit-a</a>,
 
               Workep is subject to the investigatory and enforcement powers of the Federal Trade Commission (FTC).
             </p>
-    -->
-
 
             <h5>Changes to this Privacy Policy</h5>
             <p>We may change this policy from time to time, and if we do we will post any changes on this page. If you continue to use the Services after those changes are in effect, you agree to the revised policy.</p>
@@ -487,12 +485,12 @@ If you join a Team workspace and create a user account, you are a “user,” as
             <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
           </ul>
         </div>
-        <!-- <div class="app_storelink">
+        <div class="app_storelink">
           <ul>
             <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-            <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
+            <li><a href="https://apps.apple.com/app/id1438404215"><img src="images/app_store.png" alt="workep iOS"></a></li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
