Mobile Apps and slack pages
done

--- a/es/workep-para-educacion.html
+++ b/es/workep-para-educacion.html
@@ -475,8 +475,8 @@
 
             <div class="app_storelink">
               <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-                <li><a href="https://apps.apple.com/app/id1438404215"><img src="images/app_store.png" alt="workep iOS"></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
+                <li><a href="https://apps.apple.com/app/id1438404215"><img src="../images/app_store.png" alt="workep iOS"></a></li>
               </ul>
             </div>
 
