--- a/es/casosdeuso.html
+++ b/es/casosdeuso.html
@@ -1378,8 +1378,8 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
 
           <div class="app_storelink">
             <ul>
-              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-              <li><a href="https://apps.apple.com/app/id1438404215"><img src="images/app_store.png" alt="workep iOS"></a></li>
+              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
+              <li><a href="https://apps.apple.com/app/id1438404215"><img src="../images/app_store.png" alt="workep iOS"></a></li>
             </ul>
           </div>
 
