Mobile apps page link
Solved

--- a/downloadapps.html
+++ b/downloadapps.html
@@ -155,6 +155,7 @@
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
             <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+            <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -197,7 +198,7 @@
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/downloadapp.html" selected>English</option>
+              <option value="https://workep.com/downloadapps.html" selected>English</option>
               <option value="https://workep.com/es/descargarapps.html">Español</option>
             </select>
          </div>
