--- a/es/precios.html
+++ b/es/precios.html
@@ -1021,6 +1021,7 @@
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -1063,8 +1064,8 @@
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Español</option>
+                <option value="https://workep.com/pricing.html" selected>English</option>
+                <option value="https://workep.com/es/precios.html">Español</option>
               </select>
            </div>
           </div>
