--- a/index.html
+++ b/index.html
@@ -726,6 +726,7 @@
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
