--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -418,6 +418,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
                 <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
                 <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
                 <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+                <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
               </ul>
             </div>
             <div class="foot3">
