--- a/es/descargarapps.html
+++ b/es/descargarapps.html
@@ -155,6 +155,7 @@
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
             <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
             <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+            <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -197,7 +198,7 @@
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/downloadapp.html" selected>English</option>
+              <option value="https://workep.com/downloadapps.html" selected>English</option>
               <option value="https://workep.com/es/descargarapps.html">Español</option>
             </select>
          </div>
