--- a/es/socios.html
+++ b/es/socios.html
@@ -371,6 +371,7 @@
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -413,8 +414,8 @@
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Español</option>
+                <option value="https://workep.com/partners.html" selected>English</option>
+                <option value="https://workep.com/es/socios.html">Español</option>
               </select>
            </div>
           </div>
