--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -428,6 +428,7 @@ If you join a Team workspace and create a user account, you are a “user,” as
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
             <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+            <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
