--- a/slack.html
+++ b/slack.html
@@ -152,6 +152,7 @@
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
             <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+            <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -194,8 +195,8 @@
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/downloadapp.html" selected>English</option>
-              <option value="https://workep.com/es/descargarapps.html">Español</option>
+              <option value="https://workep.com/slack.html" selected>English</option>
+              <option value="https://workep.com/slack.html">Español</option>
             </select>
          </div>
         </div>
