--- a/stories.html
+++ b/stories.html
@@ -1317,6 +1317,7 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
