Videos supported for safari
Done

--- a/downloadapps.html
+++ b/downloadapps.html
@@ -111,7 +111,7 @@
 
                                     <source src="images/videos/mobileapps.MP4" type="video/mp4">
                                     <source src="images/videos/mobileapps.webm" type="video/webm">
-                                    <source src="iamges/videos/mobileapps.og" type="video/ogg">
+                                    <source src="images/videos/mobileapps.ogg" type="video/ogg">
 
               </video>
             </div>
