--- a/slack.html
+++ b/slack.html
@@ -115,9 +115,10 @@
         <div class="googlepay-appstore-holder">
           <span class="starttrial_btn">What kind of notifications?</span>
           <ul style="margin-top: 20px;">
-            <li><h6 class="list-styles-apps">Tasks due dates changes</h6></li>
+            <li><h6 class="list-styles-apps">Tasks due dates</h6></li>
             <li><h6 class="list-styles-apps">Tasks completed</h6></li>
             <li><h6 class="list-styles-apps">Tasks assigned</h6></li>
+            <li><h6 class="list-styles-apps">Tasks comments</h6></li>
             <li><h6 class="list-styles-apps">Subtasks actions</h6></li>
             <li><h6 class="list-styles-apps">Mentions</h6></li>
             <li><h6 class="list-styles-apps">And other <b>15+ notifications...</b></h6></li>
