--- a/es/descargarapps.html
+++ b/es/descargarapps.html
@@ -113,7 +113,7 @@
 
                                     <source src="../images/videos/mobileapps.MP4" type="video/mp4">
                                     <source src="../images/videos/mobileapps.webm" type="video/webm">
-                                    <source src="../iamges/appstore.og" type="video/ogg">
+                                    <source src="../images/mobileapps.ogg" type="video/ogg">
 
               </video>
             </div>
