SEO Titles for main pages
Changed to:
Workep: Project Management Software Built For Google & G-Suite

--- a/es/es.html
+++ b/es/es.html
@@ -40,7 +40,7 @@
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
     <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
-    <title>Workep: la experiencia de gestión de proyectos más rápida para la colaboración entre empresas: integración con G Suite, diagramas de Gantt, registro de tiempos y presupuesto, y más.</title>
+    <title>Workep: Software de Gestión de Proyectos para Google & G-Suite</title>
 
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
