--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
     <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
 
-    <title>Workep: The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more.</title>
+    <title>Workep: Project Management Software Built For Google & G-Suite</title>
 
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
