Main and product page gifts.
Done

--- a/es/es.html
+++ b/es/es.html
@@ -162,9 +162,7 @@
 
   </div>
 
-
-
-        <div class="collaboration_list collaboration_list_index">
+  <!-- <div class="collaboration_list collaboration_list_index">
           <ul>
             <li>
               <div class="collaboration_person opbox pmguy" data-src=".pmguy">
@@ -185,10 +183,16 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <div class="collaboration_allim_single">
-          <div class="collaboration_allim">
+  <div class="collaboration_allim_single">
+
+    <video width="100%" height="auto" autoplay loop muted playsinline>
+      <source src="../images/gifts/cross-team-collaboration.webm" type="video/webm" />
+    </video>
+
+
+          <!-- <div class="collaboration_allim">
             <img src="../images/proj_mang_allslide.png" alt="">
           </div>
           <div class="collaboration_list_index_tabcontent">
@@ -208,14 +212,11 @@
                 </div>
               </div>
 
-          </div>
+          </div> -->
         </div>
 
-
-
-
-
 </div>
+
 <div class="foundation_sec common_gap">
   <div class="container">
         <div class="section_title">
