--- a/es/producto.html
+++ b/es/producto.html
@@ -127,7 +127,7 @@ y totalmente integrado dentro de G Suite.</p>
     </div>
     <div class="startsec">
         <div class="startsec_in">
-          <h3>Start</h3>
+          <h3>Empezar</h3>
           <span class="robochar">
             <img src="../images/gen2.png" alt="" class="oscillation">
             <svg viewBox="0 0 100 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
@@ -169,7 +169,9 @@ y totalmente integrado dentro de G Suite.</p>
 
                       <div class="row">
                       <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="../images/todo_list1.png" alt="">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="../images/gifts/To-do_V.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Organice sus tareas en listas de tareas pendientes.
@@ -185,7 +187,9 @@ hitos específicos.</P>
 
                       <div class="row">
                       <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="../images/kanban.png" alt="">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="../images/gifts/Kanban_V2.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Visualiza tus flujos de trabajo, identifique cualquier problema en los procesos y pruebe los cambios en tiempo real.</P>
@@ -199,7 +203,9 @@ hitos específicos.</P>
 
                       <div class="row">
                       <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="../images/gantt_2.png" alt="">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="../images/gifts/Gantt.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Visualiza tus tareas programadas a lo largo del tiempo, identifica cuellos de botella y tareas críticas que podrían afectar el desarrollo del proyecto.</P>
@@ -212,7 +218,9 @@ hitos específicos.</P>
 
                       <div class="row">
                       <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="../images/agile_1.png" alt="">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="../images/gifts/Agile_V2.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Divide tu proyecto en iteraciones, libere segmentos de proyectos, evalúe su éxito y adáptate a los problemas para evitar fallos importantes.</P>
@@ -270,7 +278,7 @@ hitos específicos.</P>
                <div class="justlike_google_block common_gap wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="section_title">
                   <h2>Inbox</h2>
-                  <p>Rastrea y supervisa lo que es importante, la carga de trabajo de tu equipo, tus objetivos, incluso tus tareas personales. <br/> Filtrar por proyecto, responsables, fechas de vencimiento, etiquetas, etc.</p>
+                  <p>Rastrea y supervisa lo que es importante, la carga de trabajo de tu equipo, tus objetivos, incluso tus tareas personales. <br/></p>
 
                 </div>
                 <div class="justlike_google_block_im">
