--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
 
   </div>
 
-
-
-        <div class="collaboration_list collaboration_list_index">
+        <!-- <div class="collaboration_list collaboration_list_index">
           <ul>
             <li>
               <div class="collaboration_person opbox pmguy" data-src=".pmguy">
@@ -184,10 +182,15 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="collaboration_allim_single">
-          <div class="collaboration_allim">
+
+          <video width="100%" height="auto" autoplay loop muted playsinline>
+            <source src="images/gifts/cross-team-collaboration.webm" type="video/webm" />
+          </video>
+
+          <!-- <div class="collaboration_allim">
             <img src="images/proj_mang_allslide.png" alt="">
           </div>
           <div class="collaboration_list_index_tabcontent">
@@ -207,14 +210,11 @@
                 </div>
               </div>
 
-          </div>
+          </div> -->
         </div>
 
-
-
-
-
 </div>
+
 <div class="foundation_sec common_gap">
   <div class="container">
         <div class="section_title">
@@ -442,8 +442,6 @@
   </div>
 </div>
 
-
-
 <div class="all_teams_sec common_gap">
   <div class="container">
       <div class="section_title">
@@ -451,7 +449,7 @@
         <p>Flexible solution that adapts to every type of team. <br>Learn how Workep can help your team's projects be successful </p>
       </div>
       <div class="row all_teams_list">
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
+        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="0.6s">
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team1.png" alt="workep marketing team">
@@ -467,7 +465,7 @@
 
           </div>
         </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.6s" data-wow-duration="1s">
+        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="0.6s">
           <div class="all_teams_sizebox">
              <div class="all_teams_sizeboxR">
               <img src="images/team2.png" alt="workep consulting team">
@@ -481,7 +479,7 @@
 
           </div>
         </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.9s" data-wow-duration="1s">
+        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="0.6s">
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team3.png" alt="workep development team">
@@ -495,7 +493,7 @@
 
           </div>
         </div>
-        <div class="col-lg-6 wow bounceInUp" data-wow-delay="1.2s" data-wow-duration="1s">
+        <div class="col-lg-6 wow bounceInUp" data-wow-delay="0.6s" data-wow-duration="0.6s">
           <div class="all_teams_sizebox">
             <div class="all_teams_sizeboxR">
               <img src="images/team4.png" alt="workep Enterprise team">
@@ -562,6 +560,7 @@
       </div>
     </div>
   </div>
+
 <div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
     <div class="container">
       <div class="section_title">
@@ -569,43 +568,43 @@
       </div>
     </div>
    <div class="companies_list">
-     <div class="companies1 wow bounceInUp" data-wow-delay="0.001s" data-wow-duration="3s">
+     <div class="companies1 wow bounceInUp" data-wow-delay="0.001s" data-wow-duration="1s">
        <img src="images/comp1.png" alt="">
      </div>
-     <div class="companies2 wow bounceInUp" data-wow-delay="0.002s" data-wow-duration="3s" >
+     <div class="companies2 wow bounceInUp" data-wow-delay="0.002s" data-wow-duration="1s" >
        <img src="images/comp2.png" alt="">
      </div>
-     <div class="companies3 wow bounceInUp" data-wow-delay="0.003s" data-wow-duration="3s" >
+     <div class="companies3 wow bounceInUp" data-wow-delay="0.003s" data-wow-duration="1s" >
        <img src="images/comp3.png" alt="">
      </div>
-     <div class="companies4 wow bounceInUp" data-wow-delay="0.004s" data-wow-duration="3s" >
+     <div class="companies4 wow bounceInUp" data-wow-delay="0.004s" data-wow-duration="1s" >
        <img src="images/comp4.png" alt="">
      </div>
-     <div class="companies5 wow bounceInUp" data-wow-delay="0.005s" data-wow-duration="3s" >
+     <div class="companies5 wow bounceInUp" data-wow-delay="0.005s" data-wow-duration="1s" >
        <img src="images/comp5.png" alt="">
      </div>
-     <div class="companies6 wow bounceInUp" data-wow-delay="0.006s" data-wow-duration="3s" >
+     <div class="companies6 wow bounceInUp" data-wow-delay="0.006s" data-wow-duration="1s" >
        <img src="images/comp6.png" alt="">
      </div>
-     <div class="companies7 wow bounceInUp" data-wow-delay="0.007s" data-wow-duration="3s" >
+     <div class="companies7 wow bounceInUp" data-wow-delay="0.007s" data-wow-duration="1s" >
        <img src="images/comp7.png" alt="">
      </div>
-     <div class="companies8 wow bounceInUp" data-wow-delay="0.008s" data-wow-duration="3s" >
+     <div class="companies8 wow bounceInUp" data-wow-delay="0.008s" data-wow-duration="1s" >
        <img src="images/comp8.png" alt="">
      </div>
-     <div class="companies9 wow bounceInUp" data-wow-delay="0.009s" data-wow-duration="3s" >
+     <div class="companies9 wow bounceInUp" data-wow-delay="0.009s" data-wow-duration="1s" >
        <img src="images/comp9.png" alt="">
      </div>
-     <div class="companies10 wow bounceInUp" data-wow-delay="0.010s" data-wow-duration="3s" >
+     <div class="companies10 wow bounceInUp" data-wow-delay="0.010s" data-wow-duration="1s" >
        <img src="images/comp10.png" alt="">
      </div>
-     <div class="companies11 wow bounceInUp" data-wow-delay="0.011s" data-wow-duration="3s" >
+     <div class="companies11 wow bounceInUp" data-wow-delay="0.011s" data-wow-duration="1s" >
        <img src="images/comp11.png" alt="">
      </div>
-     <div class="companies12 wow bounceInUp" data-wow-delay="0.012s" data-wow-duration="3s" >
+     <div class="companies12 wow bounceInUp" data-wow-delay="0.012s" data-wow-duration="1s" >
        <img src="images/comp12.png" alt="">
      </div>
-     <div class="companies13 wow bounceInUp" data-wow-delay="0.013s" data-wow-duration="3s" >
+     <div class="companies13 wow bounceInUp" data-wow-delay="0.013s" data-wow-duration="1s" >
        <img src="images/comp13.png" alt="">
      </div>
    </div>
