--- a/product.html
+++ b/product.html
@@ -166,10 +166,11 @@ and fully integrated within G Suite.</p>
             <div class="where_we_work_tab_bot resp-tabs-container">
 
                   <div class="as_flexible_as_content">
-
                       <div class="row">
-                      <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="images/todo_list1.png" alt="">
+                      <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="images/gifts/To-do_V.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Organize your tasks in to-do lists
@@ -181,12 +182,12 @@ specific milestones.</P>
 
                   </div>
 
-
                   <div class="as_flexible_as_content">
-
                       <div class="row">
-                      <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="images/kanban.png" alt="">
+                      <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="images/gifts/Kanban_V2.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Visualize your workflow, identify
@@ -197,12 +198,13 @@ out changes to improve your flow.</P>
 
                   </div>
 
-
                   <div class="as_flexible_as_content">
 
                       <div class="row">
-                      <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="images/gantt_2.png" alt="">
+                      <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="images/gifts/Gantt.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Visualize your tasks scheduled
@@ -217,8 +219,10 @@ rest of the project..</P>
                   <div class="as_flexible_as_content">
 
                       <div class="row">
-                      <div class="col-md-8 as_flexible_as_contentL">
-                        <img src="images/agile_1.png" alt="">
+                      <div class="col-md-8 as_flexible_as_contentL" style="border-radius: 10px;">
+                        <video width="100%" height="auto" autoplay loop muted playsinline>
+                          <source src="images/gifts/Agile_V2.webm" type="video/webm" />
+                        </video>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Break your project into iterations,release project segments, evaluate
