--- a/es/es.html
+++ b/es/es.html
@@ -63,6 +63,15 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <header class="main_head">
+
+      <!-- Covid-19 -->
+      <div class="covid-banner">
+          <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="sparkles" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-sparkles fa-w-16 fa-spin fa-lg" style="width: 1em;color: white;margin: 10px;"><g class="fa-group"><path fill="currentColor" d="M423.16 186.58L448 127l59.58-24.84a8 8 0 0 0 0-14.32L448 63 423.16 3.42a8 8 0 0 0-14.32 0L384 63l-59.58 24.84a8 8 0 0 0 0 14.32L384 127l24.84 59.58a8 8 0 0 0 14.32 0zm-14.32 136.84L384 383l-59.58 24.84a8 8 0 0 0 0 14.32L384 447l24.84 59.58a8 8 0 0 0 14.32 0L448 447l59.58-24.84a8 8 0 0 0 0-14.32L448 383l-24.84-59.58a8 8 0 0 0-14.32 0z" class="fa-secondary"></path><path fill="currentColor" d="M384 254.64a16.06 16.06 0 0 0-8.84-14.33l-112.57-56.39-56.28-112.77c-5.44-10.87-23.19-10.87-28.62 0l-56.28 112.77L8.84 240.31a16 16 0 0 0 0 28.67l112.57 56.39 56.28 112.77a16 16 0 0 0 28.62 0l56.28-112.77L375.16 269a16.07 16.07 0 0 0 8.84-14.36z" class="fa-primary"></path></g></svg>
+          <a href="https://blog.workep.com/es/workep-covid-19-300-planes-premium-gratuitos"><h2>NUESTRA RESPUESTA A COVID-19</h2></a>
+      </div>
+
+      <!-- Covid-19 End -->
+
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
@@ -106,8 +115,8 @@
 
 <div class="index_banner">
   <div class="container index_banner_content">
-    <h1>Reconstruimos la experiencia de gestión de proyectos</h1>
-    <p>Una herramienta de colaboración entre empresas que es rápida, fácil de usar y totalmente integrada con G Suite</p>
+    <h1>Estamos todos juntos en esto! #covid-19</h1>
+    <p>La herramienta de colaboración remota entre empresas que es rápida, fácil de usar y totalmente integrada con G Suite</p>
     <div class="joinworkep_btns">
         <ul>
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
@@ -122,7 +131,13 @@
         </ul>
       </div>
   </div>
-  <img src="../images/home_bannerbg1.png" alt="">
+  <img src="../images/main_pic@3x.png" alt="" style="max-width: 50%">
+</div>
+
+<div class="video_covid_container">
+  <div class="video_covid_wrapper">
+    <iframe style="border-radius: 10px" width="1200" height="500" src="https://www.youtube.com/embed/IKgB9f9Wv4Y?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 </div>
 
 <div class="index_made_forgoogle common_gap">
